--- a/src/App.css
+++ b/src/App.css
@@ -578,7 +578,7 @@ body {
 
 .profile-img-mf {
 	height: 250px;
-	object-fit: cover;
+	object-fit: contain;
 	object-position: top;
 	isolation: isolate;
 }
